--- a/playstyle.css
+++ b/playstyle.css
@@ -84,13 +84,13 @@ header ul li
 	margin-left:-2px;
 	float:left;
 }
-#userlist li
+#userlist>li
 {
 	height:6%;
 	width:100%;
 	border-bottom:1px solid black;
 }
-#userlist li:first-child
+#userlist>li:first-child
 {
 	border-bottom:2px solid black;
 }
@@ -363,7 +363,7 @@ header ul li
 .killbutton
 {
 	background: linear-gradient(#c40e0e, #d66565);
-	width: 25%;
+	width: 20%;
 	float:right;
 	text-align:center;
 	cursor:default;
@@ -375,7 +375,7 @@ header ul li
 .revivebutton
 {
 	background: linear-gradient(#55BF0A, #0E7800);
-	width: 25%;
+	width: 20%;
 	float:right;
 	text-align:center;
 	cursor:default;
@@ -387,7 +387,7 @@ header ul li
 .jailbutton
 {
 	background: linear-gradient(#021E3E, #424242);
-	width: 25%;
+	width: 20%;
 	float:right;
 	text-align:center;
 	cursor:default;
@@ -400,7 +400,7 @@ header ul li
 .releasebutton
 {
 	background: linear-gradient(#CACACA, #B5B5B5);
-	width: 25%;
+	width: 20%;
 	float:right;
 	text-align:center;
 	cursor:default;
@@ -409,6 +409,56 @@ header ul li
 .releasebutton:hover
 {
 	background:#CACACA;
+}
+.more
+{
+	width: 5%;
+	float:right;
+	text-align:center;
+	cursor:default;
+	color:black;
+	background:orange;
+
+}
+#morelist
+{
+	position:absolute;
+	width:10%;
+	height:30%;
+	right:0;
+	background:white;
+	border:1px solid black;
+	list-style:none;
+	padding:0;
+}
+.morelistheading
+{
+	width:100%;
+	height:10%;
+	background:#989898;
+}
+.morelistitem
+{
+
+}
+.morelistitem:hover
+{
+	background:#C4C4C4;
+}
+.modwillbutton
+{
+	width: 5%;
+	float:right;
+	text-align:center;
+	cursor:default;
+	color:white;
+	background:#8B6914;	
+	font-size:10px;
+}
+.modwillbutton:hover
+{
+	background:#E1D45B;
+	color:black;
 }
 .num
 {
