--- a/playstyle.css
+++ b/playstyle.css
@@ -72,6 +72,35 @@ header ul li
 {
 	background:yellow;
 }
+.rolecard
+{
+	background:url("http://i.imgur.com/SB1069d.jpg");
+	background-size: 100% 100%;
+	height: 373px;
+    width: 267px;
+    text-shadow: 0px 4px 6px #191919;
+    color:white;
+    position:relative;
+    padding:20px;
+    padding-top:10px;
+}
+.rolecard .aligntext
+{
+    float: left;
+}
+.rolecard .abilities
+{
+	float: left;
+    width: 100%;
+}
+.goal
+{
+	display: block;
+    color: white;
+    position: absolute;
+    left: 27px;
+    bottom: 20px;
+}
 #userlist
 {
 	list-style:none;
@@ -530,6 +559,11 @@ header ul li
 .jailing
 {
 	background:#BDBDBD;
+}
+.moon
+{
+	background:#249AC7;
+	color:white;
 }
 .whisper
 {
