Added /alert command. Added announcement colours

--- a/playstyle.css
+++ b/playstyle.css
@@ -682,7 +682,35 @@ header ul li
 {
 	background:lime;
 }
-
+/*----Announcement tags----*/
+maf
+{
+	color:red;
+}
+arso
+{
+	color:#E88718;
+}
+ww
+{
+	color:#855217;
+}
+jester
+{
+	color:#E542C7;
+}
+town
+{
+	color:#4CC327;
+}
+sk
+{
+	color:#10188C;
+}
+neut
+{
+	color:grey;
+}
 /*----Chat messages----*/
 .mafia
 {
