--- a/playstyle.css
+++ b/playstyle.css
@@ -31,7 +31,7 @@ header
 	width:100%;
 	padding-left:5px;
 }
-#rolelist
+#rolelist, #automodsettings
 {
 	position:absolute;
 	top:5%;
@@ -41,6 +41,40 @@ header
 	margin:0;
 	padding:0;
 	list-style:none;
+}
+#automodsettings
+{
+	border: 1px solid black;
+	z-index: 10;
+	background:white;
+}
+#automodsettings li
+{
+	height: 30%;
+	width:100%;
+	position:relative;
+	background:white;
+	
+}
+#automodsettings li div
+{
+	position:absolute;
+	top: 6%;
+	left:6%;
+	right:6%;
+	bottom:6%;
+	padding: 1em;
+	border: 1px solid transparent;
+	border-radius: 8px;
+	cursor:default;
+}
+#automodsettings li div:hover
+{
+	border: 1px solid #D0CCCC;
+}
+#automodsettings li div:active
+{
+	background: #929292;
 }
 #rolelist li
 {
@@ -446,9 +480,21 @@ header ul li
 	width:27px;
 	float:left;
 }
-#rolelistbutton:hover
+#rolelistbutton:hover, #automodsettingsbutton:hover
 {
-	background-color:yellow;
+	background-color: #D8D8D8;
+}
+#rolelistbutton:active, #automodsettingsbutton:active
+{
+	background-color:#828282;
+}
+#automodsettingsbutton
+{
+	background-image: url('settings.png');
+	background-size: 100% 100%;
+	height:30px;
+	width:27px;
+	float:left;
 }
 .editbutton
 {
@@ -786,12 +832,11 @@ header ul li
 }
 .showroles:hover, .showlist:hover
 {
-	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
-	background-color:#e9e9e9;
+	background:#f9f9f9;
 }
 .showroles:active, .showlist:active
 {
-	background:#CACACA;
+	background:#e9e9e9;
 }
 .rolelistcontrols
 {
@@ -820,6 +865,40 @@ header ul li
 {
 	float:left;
 	margin:0;
+}
+#autoRolesButton
+{
+	float: left;
+	height: 1.5em;
+	width: 6em;
+	background: linear-gradient(#f9f9f9, #e9e9e9);
+	margin-top: 5px;
+    text-align: center;
+    box-shadow: inset 0px 1px 0px 0px #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    color: #666666;
+    font-family: Arial;
+    font-size: 15px;
+    border: 1px solid #dcdcdc;
+    position:relative;
+}
+#autoRolesButton:hover
+{
+	background:#f9f9f9;
+}
+#autoRolesButton:active
+{
+	background:#e9e9e9;
+}
+#autoRolesButton p
+{
+	position:absolute;
+	margin:0;
+	padding:0;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
 }
 /*--Verdicts--*/
 .verdictinterface
@@ -996,4 +1075,40 @@ neut
 	height:100%;
 	border-right: 1px solid #5E470D;
 	float:left;
+}
+.editableMessage
+{
+	border-radius: 8px;
+	padding: 5px;
+	padding-top:2px;
+	padding-bottom:2px;
+}
+.editableMessage:hover
+{
+	background: #CBCBFF;
+}
+.editingMessage
+{
+	border-radius: 8px;
+	width: 100%;
+}
+.grow
+{
+	height: initial;
+	overflow: auto;
+}
+.shrink
+{
+	height:0px;
+	overflow:hidden;
+	display:none;
+	visibility:hidden;
+}
+.helppanel
+{
+	width:100%;
+}
+.commandheader
+{
+	margin-top:1em;
 }
