--- a/playstyle.css
+++ b/playstyle.css
@@ -9,9 +9,9 @@ html,body
 }
 header
 {
-	height:5%;
+	height:2em;
 	width:100%;
-	background:#848484;
+	background:#151633;
 	border-bottom:1px solid black;
 }
 #main
@@ -117,13 +117,16 @@ header
 	min-height:100px;
 	border: 1px solid black;
 	display:block;
+	font-family: 'Open Sans', Arial, sans-serif;
 }
 .automodcontainer header
 {
 	height:30px;
 	width:100%;
-	background: #4B72C4;
+	background: #151633;
 	position: relative;
+	font-family:'Denk One', Arial, sans-serif;
+	color:white;
 }
 .automodcontainer header p
 {
@@ -140,7 +143,7 @@ header
 .automodcontainer h2
 {
 	text-align:center;
-	font-family:Arial;
+	font-family:'Open Sans', Arial, sans-serif;
 	font-size:20px;
 }
 .automodcontainer table
@@ -212,7 +215,7 @@ table tbody
 	border: 1px solid #00043D;
     background: #4B72C4;
     cursor: pointer;
-    font-family:Arial;
+    font-family: 'Open Sans', Arial, sans-serif;
     font-size:15px;
     color:#0D1771;
 }
@@ -266,40 +269,46 @@ table tbody
 header ul
 {
 	list-style:none;
-	margin-left:auto;
-	margin-right:auto;
 	margin:0;
+	padding:0;
+	height:100%;
+	width:80%;
+	float:left;
 }
 header ul li
 {
 	cursor:pointer;
-	
 	float:left;
-	margin-left:10px;
-	margin-bottom:0;
-	padding-left:12px;
-	padding-right:12px;
+	margin:0;
+	margin-left:-1px;
+	padding:0;
     text-align: center;
     display: block;
-    color: #000;
-    
-    border: 1px solid black;
-    color: grey;
-    
-    background: #94c4fe;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(31%,#94c4fe), color-stop(100%,#d3f6fe));
-    background: -webkit-linear-gradient(top,  #94c4fe 31%,#d3f6fe 100%);
-    background: -moz-linear-gradient(top,  #94c4fe 31%, #d3f6fe 100%);
-    background: -o-linear-gradient(top,  #94c4fe 31%,#d3f6fe 100%);
-    background: -ms-linear-gradient(top,  #94c4fe 31%,#d3f6fe 100%);
-    background: linear-gradient(to bottom,  #94c4fe 31%,#d3f6fe 100%);
-    
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    
-    -webkit-box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);    
-    box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);
+    color: white;
+    height:100%;
+	border-left:1px solid black;
+	position:relative;
+	width:10%;
+	font-family: 'Denk One', Arial, sans-serif;
+	font-size:0.9em;
+}
+header ul li:last-child
+{
+	border-right:1px solid black;
+	margin-right:-1px;
+}
+.current
+{
+	color:black;
+	background:#E2E112;
+}
+header ul li span
+{
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform:translate(-50%,-50%);
+	width:100%;
 }
 .highlight
 {
@@ -338,21 +347,32 @@ header ul li
     left: 27px;
     bottom: 20px;
 }
+#adjustabledivider
+{
+	position:absolute;
+	width:2px;
+	height:100%;
+	border-left:2px transparent;
+	border-right:2px transparent;
+	background:black;
+	height:90%;
+	left: 80%;
+	top:2em;
+	cursor:ew-resize;
+}
 #userlist
 {
 	list-style:none;
 	display:block;
 	height:90%;
-	width:20%;
 	padding:0;
 	margin:0;
-	border-left:2px solid black;
 	margin-left:-2px;
-	float:left;
+	overflow:auto;
 }
 #userlist>li
 {
-	height:6%;
+	height:2.2em;
 	width:100%;
 	border-bottom:1px solid black;
 }
@@ -390,7 +410,7 @@ header ul li
 	float:left;
 	background: linear-gradient(#A39827, #FCE400);
 	border-radius:8px;
-	font-family: font-family: 'Slabo 25px', serif;
+	font-family: 'Slabo 27px', serif;
 	cursor:default;
 	color:#383300;
 	text-align:center;
@@ -439,11 +459,10 @@ header ul li
 {
 	height:100%;
 	width:8%;
-	margin-right:12%;
-	float:right;
-	background:#595959;
-	border-radius:8px;
-	font-size:2em;
+	float:left;
+	background:#493C17;
+	font-family: 'Denk One';
+	font-size:1.6em;
 	color:white;
 	text-align:center;
 }
@@ -581,6 +600,15 @@ header ul li
 	bottom:0;
 	background:rgba(160,160,160,0.9);
 }
+.downarrow
+{
+	width: 0; 
+	height: 0; 
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid black;
+	top: 80%;
+}
 .alert
 {
 	text-align:center;
@@ -589,7 +617,7 @@ header ul li
 	left:40%;
 	right:40%;
 	bottom:20%;
-	font-family: Arial;
+	font-family: 'Open Sans', Arial, sans-serif;
 }
 .alert img
 {
@@ -600,14 +628,20 @@ header ul li
 {
 	width:10%;
 	float:left;
-	font-family:Arial;
+	font-family:'Open Sans', Arial, sans-serif;
+	box-shadow: rgba(0,0,0,1) 0 1px 0;
+	text-shadow: rgba(0,0,0,.4) 0 1px 0;
+	text-decoration: none;
+	background: white;
+	position:relative;
 }
-.controlbutton
+.controlbutton span
 {
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   text-decoration: none;
-   background: white;
+	text-align:center;
+	position:absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
 }
 /*----Buttons----*/
 .mafiabutton {
@@ -739,11 +773,13 @@ header ul li
 #morelist
 {
 	position:absolute;
-	width:10%;
 	right:0;
 	background:white;
 	border:1px solid black;
 	list-style:none;
+	padding:0;
+	z-index: 10;
+	margin:0;
 	padding:0;
 }
 .morelistheading
@@ -772,16 +808,21 @@ header ul li
 }
 .num
 {
-	padding-left:5px;
-	margin-right:5px;
 	float:left;
 	font-weight:bold;
+	max-width:15%;
+	padding-left:5px;
 }
 .name
 {
 	float:left;
 	overflow:hidden;
 	text-overflow:ellipsis;
+	max-width:80px;
+	white-space: nowrap;
+	width:35%;
+	padding-left: 5px;
+    margin-right: -5px;
 }
 .setroles
 {
