--- a/playstyle.css
+++ b/playstyle.css
@@ -457,14 +457,25 @@ header ul li span
 }
 #clock
 {
-	height:100%;
-	width:8%;
-	float:left;
-	background:#493C17;
-	font-family: 'Denk One';
-	font-size:1.6em;
-	color:white;
-	text-align:center;
+	position:absolute;
+	top:100%;
+	left:50%;
+	transform:translate(-50%,0);
+	border: 2px solid black;
+	border-top:1px solid black;
+	width: 3.6em;
+	height:1.4em;
+	border-bottom-left-radius: 200px;
+	border-bottom-right-radius: 200px;
+	font-size: 1.5em;
+	background: #E2E112;
+}
+#clock span
+{
+	position:absolute;
+	top:40%;
+	left:50%;
+	transform:translate(-50%,-50%);
 }
 .role
 {
