Fixed sk target not changing

--- a/playstyle.css
+++ b/playstyle.css
@@ -468,7 +468,7 @@ header ul li span
 	border-bottom-left-radius: 200px;
 	border-bottom-right-radius: 200px;
 	font-size: 1.5em;
-	background: #E2E112;
+	background: #EBD33F;
 }
 #clock span
 {
