--- a/playstyle.css
+++ b/playstyle.css
@@ -830,11 +830,13 @@ header ul li span
 	float:left;
 	overflow:hidden;
 	text-overflow:ellipsis;
-	max-width:80px;
 	white-space: nowrap;
-	width:35%;
 	padding-left: 5px;
     margin-right: -5px;
+}
+.shorten
+{
+	max-width: 80px;
 }
 .setroles
 {
