--- a/playstyle.css
+++ b/playstyle.css
@@ -195,8 +195,11 @@ table tbody
 	padding-left:5px;
 	padding-right:5px;
 	float:left;
+	height:100%;
+}
+.automodcontainer table tr td:first-child
+{
 	border-right: 1px solid #ADADAD;
-	border-bottom: 1px solid #ADADAD;
 }
 .automodcontainer table tr td:last-child
 {
@@ -204,6 +207,7 @@ table tbody
 	border-right:none;
 	overflow:auto;
 	width:unset;
+	border-left: 1px solid #ADADAD;
 }
 .automodbutton
 {
