--- a/playstyle.css
+++ b/playstyle.css
@@ -1,8 +1,8 @@
 html,body
 {
 	margin:0;
-	padding:0;
-	background:white;
+	padding:0;s
+    background-color: #FFFFFF;
 	height:100%;
 	width:100%;
 	overflow:hidden;
