--- a/playstyle.css
+++ b/playstyle.css
@@ -18,6 +18,8 @@ header
 {
 	height:90%;
 	width:80%;
+	background-image: url('Back1.jpg');
+	background-size: 100% 100%;
 	padding:0;
 	margin:0;
 	float:left;
