--- a/playstyle.css
+++ b/playstyle.css
@@ -18,7 +18,7 @@ header
 {
 	height:90%;
 	width:80%;
-	background-image: url('Back1.jpg');
+	background-image: url('back1.png');
 	background-size: 100% 100%;
 	padding:0;
 	margin:0;
