--- a/playstyle.css
+++ b/playstyle.css
@@ -379,7 +379,7 @@ header ul li span
 .highlight
 {
 	background:#F6FF33;
-	filter:alpha(opacity=50);
+	background-color: rgba(255,255,255,0.5);
 }
 .rolecard
 {
