--- a/playstyle.css
+++ b/playstyle.css
@@ -665,6 +665,7 @@ header ul li span
 	padding-bottom:2px;
 	margin-left:5px;
 	cursor:default;
+	background: url(music.png) no-repeat;
 }
 .musicbutton:hover
 {
