--- a/playstyle.css
+++ b/playstyle.css
@@ -18,7 +18,7 @@ header
 {
 	height:90%;
 	width:80%;
-	background-image: url('ack2.png');
+	background-image: url('back2.png');
 	background-size: 100% 100%;
 	padding:0;
 	margin:0;
