--- a/playstyle.css
+++ b/playstyle.css
@@ -18,8 +18,8 @@ header
 {
 	height:90%;
 	width:80%;
-	background-image: url('back2.png');
-	background-size: 100% 100%;
+	/*background-image: url('back2.png');
+	background-size: 100% 100%;*/
 	padding:0;
 	margin:0;
 	float:left;
