--- a/playstyle.css
+++ b/playstyle.css
@@ -1257,6 +1257,11 @@ neut
 	background:#A00100;
 	color:white;
 }
+.fullmoon
+{
+	background:#8aacb8;
+	color:white;
+}
 .reviving
 {
 	background:#4ADF00;
