--- a/playstyle.css
+++ b/playstyle.css
@@ -453,6 +453,11 @@ header ul li span
 	font-weight:bold;
 	color:#38832B;
 }
+.dev
+{
+	font-weight:bold;
+	color:#0099FF;
+}
 #inputarea
 {
 	clear:both;
