--- a/playstyle.css
+++ b/playstyle.css
@@ -1026,6 +1026,7 @@ header ul li span
 	font-weight:bold;
 	max-width:15%;
 	padding-left:5px;
+	color: white;
 }
 .name
 {
@@ -1035,6 +1036,7 @@ header ul li span
 	white-space: nowrap;
 	padding-left: 5px;
     margin-right: -5px;
+	color: white;
 }
 .shorten
 {
