--- a/playstyle.css
+++ b/playstyle.css
@@ -18,8 +18,8 @@ header
 {
 	height:90%;
 	width:80%;
-	background-image: url('Snowback1.png');
-	background-size: 100% 100%;
+	/*background-image: url('Snowback1.png');
+	background-size: 100% 100%;*/
 	padding:0;
 	margin:0;
 	float:left;
@@ -83,7 +83,7 @@ header .moonimg
 {
 	width:100%;
 	padding-left:5px;
-	color: white;
+	/*color: white;*/
 }
 .rolecardcontainer
 {
@@ -397,9 +397,9 @@ header ul li span
 }
 .highlight
 {
-	/*background:#F6FF33;*/
-	/*background-color: rgba(207,47,0,0.7);*/
-	background-color: rgba(212,36,38,0.7);
+	background:#F6FF33;
+	/*background-color: rgba(207,47,0,0.7);
+	background-color: rgba(212,36,38,0.7);*/
 }
 .rolecard
 {
@@ -452,8 +452,8 @@ header ul li span
 {
 	list-style:none;
 	display:block;
-	background-image: url('Snowback1.png');
-	background-size: 500% 100%;
+	/*background-image: url('Snowback1.png');
+	background-size: 500% 100%;*/
 	height:90%;
 	padding:0;
 	margin:0;
